syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

// TimeRecord service definition
service TimeRecord {
	// Sends a time request to the server to initiate a new job record
	rpc InitiateTimer (TimeRequest) returns (Confirmation) {}

	// Sends a time request to the server to complete a job request
	rpc CompleteTimer (TimeRequest) returns (Confirmation) {}
}

enum JobStatus {
	NEW = 0;
	STARTED = 1;
	PAUSED = 2;
	FINISHED = 3;
}

message TimeRequest {
	int32 jobID = 1;
	google.protobuf.Timestamp timer = 2;
	JobStatus jobStatus = 3;
}

message Confirmation {
	int32 jobID = 1;
	JobStatus jobStatus = 2;
	bool error = 3;
}